# stationeers-pytrapic

./: .gitignore  .gitmodules  Dist.props  Main.csproj  Main.props  README.md  modrepo.xml  modrepo_cache.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  webapp.yml
About/: About.xml
examples/: airlock.py  clock.py  nested_function_calls.py  one_file_rules_them_all.py  one_file_to_rule_them_all.py  solar.py  string_counter.py
mod/: .gitignore  Editor.cs  Extractor.cs  ImGuiEditor.cs  Installer.cs  NuGet.Config  PyTrapIC.cs  PyTrapIC.csproj  PyTrapIC.props  PythonFormatter.cs  PythonStaticFormatter.cs  README.md  SlangFormatter.cs  build.sh  create_version_info.py  get_version.py  install.sh  release.sh
mod/About/: About.xml
scripts/: build_all.sh  build_data.sh  build_enums.py  build_intrinsics.py  build_readme.py  build_types.py  build_ws.sh
src/stationeers_pytrapic/: __init__.py  __main__.py  build_types.py  builtins.py  compile_pass.py  compiler.py  generate_code.py  intrinsics.py  mod_daemon.py  parse_lua.py  register_assignment.py  stationpedia.py  structures_generated.py  symbols.py  types.py  types_generated.py  utils.py
test/: generate.sh  test_cases.py  test_examples.py  test_libraries.py
test/cases/: batch_method_before_logic_type.compact.ref  batch_method_before_logic_type.py  batch_method_before_logic_type.ref  binop.py  binop.ref  bool_ops.compact.ref  bool_ops.py  bool_ops.ref  bool_ops_multiple.compact.ref  bool_ops_multiple.py  bool_ops_multiple.ref  constant_array.compact.ref  constant_array.py  constant_array.ref  constant_expressions.compact.ref  constant_expressions.py  constant_expressions.ref  constexpr_eval.compact.ref  constexpr_eval.py  constexpr_eval.ref  continue.compact.ref  continue.py  continue.ref  continue_if_false.compact.ref  continue_if_false.py  continue_if_false.ref  device_alias.compact.ref  device_alias.py  device_alias.ref  display_mode.py  display_mode.ref  enum_mode_value.compact.ref  enum_mode_value.py  enum_mode_value.ref  error_reassign_device.compact.ref  error_reassign_device.py  error_reassign_device.ref  for_loop.compact.ref  for_loop.py  for_loop.ref  (+57 more)
test/mod_libraries/: airlock.py  clock.py  solar.py  sorter.py
test/mod_scripts/: airlock.compact.ref  airlock.py  airlock.ref  clock.compact.ref  clock.py  clock.ref  solar.compact.ref  solar.py  solar.ref  solar_and_airlock.compact.ref  solar_and_airlock.py  solar_and_airlock.ref  solar_renamed.compact.ref  solar_renamed.py  solar_renamed.ref  sorter.compact.ref  sorter.py
webapp/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+50 files in other folders)
