[project]
description="PyTrapIC - Python Transpiler to IC10 for Stationeers"
license = "MIT"
name = "stationeers_pytrapic"
dependencies = ['astroid', 'luaparser', 'pygments', 'parso', 'jedi==0.19.2']
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/stationeers_pytrapic/_version.py"
